--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 distlib==0.3.4
 Django==3.2.12
 django-crispy-forms==1.14.0
+django-utils-six==2.0
 django-widget-tweaks==1.4.12
 filelock==3.7.1
 pbr==5.9.0
