--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.5.2
 distlib==0.3.4
 Django==3.2.12
+django-braces==1.15.0
 django-crispy-forms==1.14.0
 django-gravatar2==1.4.4
+django-model-utils==4.2.0
+django-star-ratings==0.9.2
 django-utils-six==2.0
 django-widget-tweaks==1.4.12
 filelock==3.7.1
@@ -14,6 +17,7 @@ pytz==2022.1
 six==1.16.0
 sqlparse==0.4.2
 stevedore==3.5.0
+swapper==1.3.0
 virtualenv==20.15.0
 virtualenv-clone==0.5.7
 virtualenvwrapper==4.8.4
