--- a/requirements.txt
+++ b/requirements.txt
@@ -3,12 +3,15 @@ distlib==0.3.4
 Django==3.2.14
 django-braces==1.15.0
 django-crispy-forms==1.14.0
+django-filter==22.1
 django-gravatar2==1.4.4
 django-model-utils==4.2.0
 django-star-ratings==0.9.2
 django-utils-six==2.0
 django-widget-tweaks==1.4.12
+djangorestframework==3.13.1
 filelock==3.7.1
+Markdown==3.4.1
 pbr==5.9.0
 Pillow==9.1.1
 platformdirs==2.5.2
