--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.10"
 services:
   app:
     container_name: 'Blog-App'
+    env_file:
+      - .env
     build:
       context: .
       network: host
