feat: change DataBase to postgresql

--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,11 @@
-SECRET_KEY = 'sample-0123456789'
+SECRET_KEY='sample-0123456789'
 DEBUG=1
-EMAIL_HOST = 'smtp.sample.com'
-EMAIL_PORT = 587
-EMAIL_HOST_USER = 'sample@gmail.com'
-EMAIL_HOST_PASSWORD = 'sample'
+EMAIL_HOST='smtp.sample.com'
+EMAIL_PORT=587
+EMAIL_HOST_USER='sample@gmail.com'
+EMAIL_HOST_PASSWORD='sample'
+
+DB_NAME='sample'
+DB_USER='sample'
+DB_PASSWORD='sample'
+DB_HOST='sample'
