--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,7 @@ server{
 
     location /static/ {
         autoindex on;
-        alias /volumes/static/;
+        alias /volumes/staticfiles/;
     }
 
     location /media/ {
