--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       context: .
       network: host
     volumes:
-      - static:/code/static/
+      - static:/code/staticfiles/
       - media:/code/media/
     expose:
       - '8000'
