add database variables to .env

--- a/.env-sample
+++ b/.env-sample
@@ -5,7 +5,12 @@ EMAIL_PORT=587
 EMAIL_HOST_USER='sample@gmail.com'
 EMAIL_HOST_PASSWORD='sample'
 
-DB_NAME='sample'
-DB_USER='sample'
-DB_PASSWORD='sample'
-DB_HOST='sample'
+DB_NAME=test
+DB_USER=testuser
+DB_PASSWORD=test12345
+DB_HOST=db
+
+
+POSTGRES_USER=testuser
+POSTGRES_PASSWORD=test12345
+POSTGRES_DB=test
