--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,11 +29,13 @@ services:
       - app
   
   db:
-    image: postgres:11
+    image: postgres:14
     volumes:
       - postgres_data:/var/lib/postgresql/data
     environment:
       - "POSTGRES_HOST_AUTH_METHOD=trust"
+    env_file:
+      - .env
 
     
 volumes:
