--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - media:/code/media/
     expose:
       - '8000'
+    ports:
+      - '8000:8000'
     
     depends_on:
       - db
