--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,7 @@ name = "DjangoBlog"
 version = "0.0.1"
 requires-python = "~=3.10"
 dependencies = [
-    "asgiref==3.5.2",
-    "distlib==0.3.4",
-    "django==3.2.25",
+    "django>=4.2.16, <5",
     "django-braces==1.15.0",
     "django-crispy-forms==1.14.0",
     "django-filter==22.1",
@@ -14,23 +12,25 @@ dependencies = [
     "django-star-ratings==0.9.2",
     "django-utils-six==2.0",
     "django-widget-tweaks==1.4.12",
-    "djangorestframework==3.13.1",
-    "filelock==3.7.1",
+    "djangorestframework>=0.3.15",
     "markdown==3.4.1",
     "pbr==5.9.0",
     "pillow==10.3.0",
-    "platformdirs==2.5.2",
     "pytz==2022.1",
     "six==1.16.0",
     "sqlparse==0.5.0",
     "stevedore==3.5.0",
     "swapper==1.3.0",
-    "virtualenv==20.15.0",
+    "virtualenv>=20.26.6",
     "virtualenv-clone==0.5.7",
     "virtualenvwrapper==4.8.4",
     "gunicorn==22.0.0",
     "psycopg2-binary>=2.9.10",
     "setuptools>=75.8.0",
+    "asgiref>=3.8.1",
+    "filelock>=3.17.0",
+    "distlib>=0.3.9",
+    "platformdirs>=4.3.6",
 ]
 
 [dependency-groups]
